fixed footer overflow

--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,26 +1,17 @@
-body {
-	margin: 0;
-}
-
-
-#header {
-	height: calc(100vh - 200px);
-}
-
 .flex-container {
 	display: flex;
 	flex-wrap: nowrap;
 	position: relative;
 	margin: 0;
 	background-color: #c7c9c7;
-	width: 100vw; 
-	height: 200px;
+	width: inherit;
+	height: inherit;
 }
 
 .flex-container > div {
 	background-color: #c7c9c7;
 	width: 100%;
-	height: 200px;
+	height: calc(200px - 15%);;
 	text-align: center;
 	font-size: 40px;
 	transform: translate(0%, 15%); 	
